fix creative install? Start work on fixing HUD